@@ -5,6 +5,10 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2023/06/21:
+- TestEngine: in helper ImGuiTestGenericItemStatus storage struct,
+  renamed 'bool Ret' to 'bool RetValue' as it is less ambiguous.
+
 2023/06/14
 - TestEngine: ItemInfoOpenFullPath() can focus/select inactive docked windows.
   (similar to e.g. opening an intermediary tree node).
